--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,5 +1,14 @@
+::selection {
+    background-color:rgba(0,0,0,0);
+}
+
 .header {
     text-align: center;
+}
+
+hr.rounded {
+    border-top: 3px solid #bbb;
+    border-radius: 5px;
 }
 
 .option-row {
@@ -16,22 +25,33 @@
     border: solid 1px #ddd;
     background-color: #eee;
     padding: 4px;
+    transition: background-color 0.1s 0s;
 }
 
 .option-container label:hover {
     background-color: rgb(151, 151, 151);
-    transition: background-color 0.2s 0s;
 }
 
-.option-container input[type=checkbox].hidden {
+.option-container input[type=checkbox].hidden,
+.option-container input[type=button].hidden {
     opacity: 0;
     position: absolute;
+    z-index: -3;
 }
 
-.option-container input[type="checkbox"]:checked + label {
+.option-container input[type=checkbox]:checked + label,
+.option-container input[type=button]:active + label {
     background-color: rgb(73, 138, 96);
     color: #fff;
-    transition: background-color 0.1s 0s;
+}
+
+.option-container input[type=checkbox]:checked + label:hover,
+.option-container input[type=button]:active + label:hover {
+    background-color: rgb(45, 83, 58);
+}
+
+.option-container.select-container {
+    display: inline-block;
 }
 
 .level-container input {
@@ -40,11 +60,6 @@
 
 .level-text {
     align-items: center;
-}
-
-hr.rounded {
-    border-top: 3px solid #bbb;
-    border-radius: 5px;
 }
 
 .submit-container {
